# agentic-agile-authoring

./: .gitignore  .secrets.baseline  404.html  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  delivery.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: deploy-docs.yml  docs-pr.yml  publish.yml
agents-roo/agentic-agile-authoring/: roo.yaml
architecture/: index.html
custom_theme/: main.html
development/: index.html
docs/: development.md  index.md  installer-spec.md  skills.md
docs/css/: extra.css
installer-spec/: index.html
scripts/: add_license_headers.py  build.py
search/: search_index.json
skills/: index.html
skills/assessment/: SKILL.md  assessment-generator.py  assessment-table.md  mock-data.md
skills/catalog-authoring/: SKILL.md  best-practices.md  editing.md  examples.md  resources.md  setup.md
skills/component-definition/: SKILL.md  csv-authoring.md  csv-to-markdown.md  csv-to-oscal-cd.md  csv_to_markdown.py
skills/git-workflow/: SKILL.md
src/agentic_agile_authoring/: __init__.py  cli.py
