[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-agile-authoring"
version = "0.1.0"
description = "Installer for agentic-agile-authoring Roo Code modes and skills"
requires-python = ">=3.11"
dependencies = ["ruamel.yaml"]

[project.scripts]
agentic-agile-authoring = "agentic_agile_authoring.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_agile_authoring"]

[tool.hatch.build.targets.wheel.force-include]
"skills"                              = "agentic_agile_authoring/data/skills"
"agents/roo/agentic-agile-authoring" = "agentic_agile_authoring/data/roo/agentic-agile-authoring"
